--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vega Christian Carlos Medina DGN4CV - Diseño Web</title>
+    <title>Vega Christian Carlos Medina Marcela Aguirre - Diseño Web</title>
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="https://use.typekit.net/zha1vip.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -131,7 +131,7 @@
         <div class="footerMain">
             <img class="footerMain__img" src="" alt="">
             <p class="footerMain__title">Poejali</p>
-            <p class="footerMain__text">Vega Christian y Carlos Medina</p>
+            <p class="footerMain__text">Vega Christian Marcela Aguirre Carlos Medina</p>
             <p class="footerMain__text">DGN4CV - Diseño Web</p>
         </div>
         <div class="footerSocial d-flex justify-content-center">
