--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
   
-        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+        <div class="collapse navbar-collapse justify-content-md-center" >
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link gothic" href="#">Inicio</a>
@@ -36,11 +38,11 @@
       </nav>
     <div class="header d-flex justify-content-center">
     <div class="header__text d-flex flex-column justify-content-center align-items-center">
-        <h1 class="title">POEJALI</h1>
+        <h1 class="title animate__animated animate__fadeIn">POEJALI</h1>
         <p class="subtitle">Todo lo que necesitas</p>
         <a href="https://web.whatsapp.com"><button class="action">Escribinos</button></a>
     </div>
-        <figure class="header__img d-flex align-items-center">
+        <figure class="header__img d-flex align-items-center animate__animated animate__fadeIn">
             <img class="header__img--logo" src="images\peArtboard 1.svg" alt="Logo de Poejali">
         </figure>
     </div>
@@ -129,7 +131,6 @@
             <a href="https://web.whatsapp.com"><button class="action">Escribinos</button></a>
         </div>
         <div class="footerMain">
-            <img class="footerMain__img" src="" alt="">
             <p class="footerMain__title">Poejali</p>
             <p class="footerMain__text">Vega Christian Marcela Aguirre Carlos Medina</p>
             <p class="footerMain__text">DGN4CV - Diseño Web</p>
